@@ -1,7 +1,8 @@
 Now:
  * Made the places that contain tooltips more visible
  * The maxima mailing list has asked to warn if greek and latin lookalike
-   chars are used.
+	chars are used.
+ * Sped up drawing new cells.
 
 19.12.0:
   * wxMaxima now uses C++11 that makes the code more readable and helps
